Implementing Feedbacks based on Images, Coursework

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="property-card">
               <a href="projects/us_presidential_election_predictive_winner.html" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-election-project">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -336,7 +336,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="property-card">
               <a href="projects/nyc_tree-census_ tableau-dashboard.html" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-nyc-tree-census">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -355,7 +355,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="property-card">
               <a href="projects/airbnb_price_estimator.html" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-hotel-industry">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -374,7 +374,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="property-card">
               <a href="projects/hba1c-readmittance-predict-project.html" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-healthcare-industry">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -393,7 +393,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="property-card">
               <a href="#" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-nlp-industry">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -412,7 +412,7 @@
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="property-card">
               <a href="projects/docdigitizer_sponsor.html" target="_blank">
-                <div class="property-image">
+                <div class="property-image property-image-idp-industry">
                   <div class="property-image-title"></div>
                 </div>
               </a>
@@ -890,18 +890,95 @@
               <h2>Northeastern University</h2>
             </div>
             <p class="description">
-              <ul>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6000_IntroductionToAnalytics" target="_blank">Introduction to Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6010_ProbabilityTheory-Statistics" target="_blank">Probability Theory and Introductory Statistics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/aminkarimpour/" target="_blank">Prof. Amin Karimpour</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6140_AnalyticsSystemsTechnology" target="_blank">Analytics Systems Technology</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6015_IntermediateAnalytics" target="_blank">Intermediate Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/roywada/" target="_blank">Prof. Roy Wada, Ph.D</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6050_IntroductionToEnterpriseAnalytics" target="_blank">Introduction to Enterprise Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/ALY6070_Communication-Visualization-DataAnalytics" target="_blank">Communication and Visualization for Data Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/trubskyy/" target="_blank">Prof. Mykhaylo B. Trubskyy</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/EAI6000_Fundamentals-ArtificialIntelligence" target="_blank">Fundamentals of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/sergiy-shevchenko-42ba0531/" target="_blank">Prof. Sergiy Shevchenko</a></li>
-                <li style="font-size: 13px;"><a href="https://github.com/harshitgaur6155/EAI6010_Applications-ArtificialIntelligence" target="_blank">Applications of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></li>
-                <li style="font-size: 13px;"><a href="#">Preparation for Experiential Learning</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></li>
-                <li style="font-size: 13px;"><a href="#">Integrated Experiential Learning</a> taught by <a style="color:#2049b9" href="#" target="_blank">Prof. Valerie A. Atherley</a></li>
-              </ul>	
+              <!-- <table>
+                <tr>
+                  <th>Course</th>
+                  <th>Teaching Professor</th>
+                </tr>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6000_IntroductionToAnalytics" target="_blank">Introduction to Analytics</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6010_ProbabilityTheory-Statistics" target="_blank">Probability Theory and Introductory Statistics</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/aminkarimpour/" target="_blank">Prof. Amin Karimpour</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6140_AnalyticsSystemsTechnology" target="_blank">Analytics Systems Technology</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6015_IntermediateAnalytics" target="_blank">Intermediate Analytics</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/roywada/" target="_blank">Prof. Roy Wada, Ph.D</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6050_IntroductionToEnterpriseAnalytics" target="_blank">Introduction to Enterprise Analytics</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/ALY6070_Communication-Visualization-DataAnalytics" target="_blank">Communication and Visualization for Data Analytics</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/trubskyy/" target="_blank">Prof. Mykhaylo B. Trubskyy</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/EAI6000_Fundamentals-ArtificialIntelligence" target="_blank">Fundamentals of Artificial Intelligence</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/sergiy-shevchenko-42ba0531/" target="_blank">Prof. Sergiy Shevchenko</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="https://github.com/harshitgaur6155/EAI6010_Applications-ArtificialIntelligence" target="_blank">Applications of Artificial Intelligence</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="#">Preparation for Experiential Learning</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></td>
+                  </tr>
+                </ul>
+
+                <ul>
+                  <tr>
+                    <td><a style="color:#05674a; font-size: 13px;" href="#">Integrated Experiential Learning</a></td>
+                    <td><a style="color:#2049b9; font-size: 13px;" href="#" target="_blank">Prof. Valerie A. Atherley</a></td>
+                  </tr>
+                </ul>
+
+              </table> -->
+                <ul>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6000_IntroductionToAnalytics" target="_blank">Introduction to Analytics</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6010_ProbabilityTheory-Statistics" target="_blank">Probability Theory and Introductory Statistics</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/aminkarimpour/" target="_blank">Prof. Amin Karimpour</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6140_AnalyticsSystemsTechnology" target="_blank">Analytics Systems Technology</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6015_IntermediateAnalytics" target="_blank">Intermediate Analytics</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/roywada/" target="_blank">Prof. Roy Wada, Ph.D</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6050_IntroductionToEnterpriseAnalytics" target="_blank">Introduction to Enterprise Analytics</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/ALY6070_Communication-Visualization-DataAnalytics" target="_blank">Communication and Visualization for Data Analytics</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/trubskyy/" target="_blank">Prof. Mykhaylo B. Trubskyy</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/EAI6000_Fundamentals-ArtificialIntelligence" target="_blank">Fundamentals of Artificial Intelligence</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/sergiy-shevchenko-42ba0531/" target="_blank">Prof. Sergiy Shevchenko</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/EAI6010_Applications-ArtificialIntelligence" target="_blank">Applications of Artificial Intelligence</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Preparation for Experiential Learning</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Integrated Experiential Learning</a> ,  <a style="color:#2049b9" href="#" target="_blank">Prof. Valerie A. Atherley</a></li>
+                </ul>
             </p>
           </div>
 
