Work Experience - Top Bottom Padding reduced to 10px

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
     <!-- ======= Work Experiences Section ======= -->
-    <section id="services">
+    <section id="services" style="padding: 10px 0;">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Work Experience</h2>
