Color changed in Online Learning Section

--- a/index.html
+++ b/index.html
@@ -1133,10 +1133,10 @@
             </div>
             <p class="description">
               <ul>
-                <li style="font-size: 13px;"><a href="#">Intermediate SQL for Data Scientists </a></li>	
-                <li style="font-size: 13px;"><a href="#">Python for Data Science Essential</a></li>
-                <li style="font-size: 13px;"><a href="#">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>
-                <li style="font-size: 13px;"><a href="#">Coursera: Data Science Math Skills</a></li>
+                <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Intermediate SQL for Data Scientists </a></li>	
+                <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Python for Data Science Essential</a></li>
+                <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>
+                <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Coursera: Data Science Math Skills</a></li>
               </ul>	
             </p>
           </div>
