Changes made to the Introduction Paragraph

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
       <div class="col-lg-8 col-md-8">
         <ul>
-          <li><h7>I am a current graduate students in the Masters in Analytics program at Northeastern University, Boston, Massachusetts, United States.</h7></li>
-          <li><h7>The concentration track for my majors is in Machine Learning and Artificial Intelligence.</h7></li>
+          <li><h7>Hello! I'm a graduate student pursuing my Masters in Data Analytics at Northeastern University, Boston, MA, US.</h7></li>
+          <li><h7>Majoring in Data Science and Machine Learning.</h7></li>
           <li><h7>I have 4 years of industry-experience as a Software Engineer and an Analyst.</h7></li>
-          <li><h7>I'm currently learning the field of deep learning using Fastai with subjects of data analytics and data science.</h7></li>
+          <li><h7>Currently, exploring and learning the field of deep learning using FastAI.</h7></li>
         </ul>
       </div>
 
