H&M Customer Purchase Prediction - Project added

--- a/index.html
+++ b/index.html
@@ -360,17 +360,17 @@
           <!-- #Project 1 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="property-card">
-              <a href="projects/us_presidential_election_predictive_winner.html" target="_blank">
-                <div class="property-image property-image-election-project">
+              <a href="projects/h&m_customer_purchase_prediction.html" target="_blank">
+                <div class="property-image property-image-HnM-project">
                   <div class="property-image-title"></div>
                 </div>
               </a>
               <div class="property-description">
-                <h5>Predictive Winner- US Presidential Political Party</h5>
+                <h5>H&M - Customer Purchase Prediction</h5>
                 <p style="font-size:12px;">
-                  <b>Industry</b>: Politics <br/>
-                  <b>Skills</b>: Python, R, SQL <br/>
-                  <b>Algorithms/Techniques</b>: Classification (Logistic Regression), Regularization (LASSO, Stepwise Selection)
+                  <b>Industry</b>: Retail Industry <br/>
+                  <b>Skills</b>: Python, SQL <br/>
+                  <b>Algorithms/Techniques</b>: Decision Tree, Random Forest, Gradient Boosting, Neural Network, H20 AutoML, SHAP
                 </p>
               </div>
             </div>
@@ -466,6 +466,25 @@
                   <b>Industry</b>: Intelligent Document Processing (IDP) <br/>
                   <b>Skills</b>: Python, R, SQL, Microsoft Azure<br/>
                   <b>Algorithms/Techniques</b>: Classification (Logistic Regression, Decision Tree)
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 7 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="property-card">
+              <a href="projects/us_presidential_election_predictive_winner.html" target="_blank">
+                <div class="property-image property-image-election-project">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5>Predictive Winner- US Presidential Political Party</h5>
+                <p style="font-size:12px;">
+                  <b>Industry</b>: Politics <br/>
+                  <b>Skills</b>: Python, R, SQL <br/>
+                  <b>Algorithms/Techniques</b>: Classification (Logistic Regression), Regularization (LASSO, Stepwise Selection)
                 </p>
               </div>
             </div>
