Changes to AirBnb Streamlit App URL

--- a/projects/airbnb_price_estimator.html
+++ b/projects/airbnb_price_estimator.html
@@ -138,7 +138,7 @@
               <p class="description">- SQL</p>
               <p class="description">- Streamlit</p>
               <p class="description">- HTML</p>
-              <p class="description">- Heroku App</p>
+              <p class="description">- Heroku</p>
             </div>
           </div>
 
@@ -174,7 +174,7 @@
   
           <div class="col" style="text-align: center;">
             <h4>Estimator App (Streamlit)</h4>
-            <a href="https://eaiproject.herokuapp.com/" target="_blank" class="tableau"><span class="iconify" data-icon="logos:streamlit" style="font-size: 60px;"></span></a>
+            <a href="https://harshitgaur6155-airbnb-price-prediction-streamlit-ap-app-b23x62.streamlit.app/" target="_blank" class="tableau"><span class="iconify" data-icon="logos:streamlit" style="font-size: 60px;"></span></a>
           </div>
 
         </div>
