Changing Resume to SDE. Modifying Course Name

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
       <div class="col-lg-8 col-md-8">
         <ul>
-          <li><h7>Hello! I'm a graduate student pursuing my Masters in Data Analytics at Northeastern University, Boston, MA, US.</h7></li>
-          <li><h7>Majoring in Data Science and Machine Learning.</h7></li>
+          <li><h7>Hello! I'm a graduate student pursuing my Master of Science in Computer Science at Northeastern University, Boston, MA, US.</h7></li>
+          <li><h7>Majoring in Machine Learning and Data Analytics.</h7></li>
           <li><h7>I have 4 years of industry-experience as a Software Engineer and an Analyst.</h7></li>
           <li><h7>Currently, exploring and learning the field of deep learning using FastAI.</h7></li>
         </ul>
