Resume and Recommender System modified

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 </div>
               </a>
               <div class="property-description">
-                <h5> Airbnb Price Estimator </h5>
+                <h5> Airbnb Price Recommender System </h5>
                 <p style="font-size:12px;">
                   <b>Industry</b>: Hotel Industry <br/>
                   <b>Skills</b>: Python, SQL, Streamlit, HTML, Heroku App<br/>
@@ -950,7 +950,7 @@
           <div class="col-md-10 col-lg-10">
            
             <div class="barWrapper">
-              <span class="progressText"><B>Python</B></span>
+              <span class="progressText"><B>PYTHON</B></span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >   
                   <span class="popOver" data-toggle="tooltip" data-placement="top" data-container="body" data-viewport=".container" title="80%"> </span>     
@@ -959,7 +959,7 @@
             </div>
     
             <div class="barWrapper">
-              <span class="progressText"><B>R</B></span>
+              <span class="progressText"><B>R, JAVA</B></span>
               <div class="progress ">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="10" aria-valuemax="100">
                   <span  class="popOver" data-toggle="tooltip" data-placement="top" title="75%"> </span>  
@@ -1142,6 +1142,8 @@
                   <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="https://github.com/harshitgaur6155/EAI6010_Applications-ArtificialIntelligence" target="_blank">Applications of Artificial Intelligence</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></li>
                   <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Preparation for Experiential Learning</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></li>
                   <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Integrated Experiential Learning</a> ,  <a style="color:#2049b9" href="#" target="_blank">Prof. Valerie A. Atherley</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Data Mining</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/kasunsamarasinghe/" target="_blank">Prof. Kasun Samarasinghe</a></li>
+                  <li style="font-size: 13px;"><a style="color:#0e956d; font-size: 13px; font-weight: bold;" href="#">Big Data & Data Management</a> ,  <a style="color:#2049b9" href="https://www.linkedin.com/in/daya-rudhramoorthi/" target="_blank">Prof. Daya Rudhramoorthi</a></li>
                 </ul>
             </p>
           </div>
