--- a/projects/airbnb_price_estimator.html
+++ b/projects/airbnb_price_estimator.html
@@ -117,7 +117,7 @@
     <section id="technical-aspect">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h3 style="color: #0a469b; text-align: center;">Airbnb Predictive Price Estimator</h3>
+          <h3 style="color: #0a469b; text-align: center;">Airbnb Predictive Price Recommender System</h3>
         </div>
 
         <div class="row gy-4">
@@ -173,7 +173,7 @@
           </div>
   
           <div class="col" style="text-align: center;">
-            <h4>Estimator App (Streamlit)</h4>
+            <h4>Recommender System App (Streamlit)</h4>
             <a href="https://harshitgaur6155-airbnb-price-prediction-streamlit-ap-app-b23x62.streamlit.app/" target="_blank" class="tableau"><span class="iconify" data-icon="logos:streamlit" style="font-size: 60px;"></span></a>
           </div>
 
@@ -235,7 +235,7 @@
 
         <div class="embed-responsive embed-responsive-21by9" style="height:450px; text-align: center;">
           <!-- <iframe class="embed-responsive-item" width="100%" height="100%" src="https://www.youtube.com/watch?v=GQsjwYs4GX4&ab_channel=AkashRaj#zoom=70"></iframe> -->
-          <iframe width="80%" height="100%" src="https://www.youtube.com/embed/GQsjwYs4GX4" title="Airbnb Price Estimator" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="80%" height="100%" src="https://www.youtube.com/embed/GQsjwYs4GX4" title="Airbnb Price Recommender System" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
       </div>
