--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box" style="padding:20px 20px 20px 20px">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="https://www.mobikasa.com/">Mobikasa Private Limited</a></h4>
-              <p class="title" style="font-size: 20px; margin-bottom: 10px;">Software Engineer</p>
+              <h4 class="title"><a href="https://www.mobikasa.com/">Mobikasa</a></h4>
+              <p class="title" style="font-size: 20px; margin-bottom: 10px;">Data Scientist (Software Engineer)</p>
               <p class="title" style="font-size: 15px; margin-bottom: 6px;">December, 2018 - August, 2021</p>
               <p class="description" style="font-size:12px; margin-top: 10px;">&#10038; Provided cutting edge engineering solutions using programming languages like PHP, Laravel, Python, SQL in various e-commerce, healthcare, logistics projects.</p>
               <p class="description" style="font-size:12px; margin-top: 10px;">&#10038; Experienced in tools/techniques like cryptography, data mining, AWS services, GCP services, etc.</p>
@@ -204,8 +204,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box" style="padding:20px 20px 20px 20px">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="https://www.crunchbase.com/organization/appster-melbourne-australia-">Appster LLP</a></h4>
-              <p class="title" style="font-size: 20px; margin-bottom: 10px;">Associate Software Engineer</p>
+              <h4 class="title"><a href="https://www.crunchbase.com/organization/appster-melbourne-australia-">Appster</a></h4>
+              <p class="title" style="font-size: 20px; margin-bottom: 10px;">Software Engineer</p>
               <p class="title" style="font-size: 15px; margin-bottom: 6px;">July, 2017 - December, 2018</p>
               <p class="description" style="font-size:12px; margin-top: 10px;">&#10038; Developed RESTful APIs with implementation of MVC architecture. Designed, handled, and maintained databases of projects using MySQL.</p>
               <p class="description" style="font-size:12px; margin-top: 10px;">&#10038; Proactively analyzed & assisted in the User Story Analysis process of projects and incorporated payment gateways, openfire servers, cryptography using APIs.</p>
